#36 Fix black background on checkbox on Safari

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,4 +38,5 @@ input[type="checkbox"]:checked {
     background-repeat: no-repeat;
     background-position: center;
     background-size: 18px 13px;
+    background-color: #ffffff;
 }
